Implemented per-tier Minion textures
Took 7 minutes